# homelab-vm-provisioner-webapp

./: .env.example  .gitignore  .gitmodules  AGENTS.md  DATABASE_INTEGRATION.md  DOCKER.md  RABBITMQ_IMPLEMENTATION_REPORT.md  README.md  build  docker-clean  package-lock.json  setup  start  test  test-all
agents/: README.md  TOKEN_EFFICIENCY.md  coverage-runner.agent.md  defect-fixer.agent.md  doc-writer.agent.md  feature-developer.agent.md  test-writer.agent.md
homelab-vm-provisioner-db/: .env.example  AGENTS.md  DOCKER.md  Dockerfile  LICENSE  README.md  build  docker-entrypoint.sh  package.json  setup  start  stop  test
homelab-vm-provisioner-db-interface/: .env.example  AGENTS.md  DOCKER.md  Dockerfile  README.md  build  package-lock.json  package.json  setup  start
homelab-vm-provisioner-job-queue/: .env.example  AGENTS.md  README.md  build  setup  start  stop  test
homelab-vm-provisioner-proxy/: .dockerignore  .env.example  AGENTS.md  DOCKER.md  Dockerfile  LICENSE  README.md  build  package-lock.json  package.json  setup  start
homelab-vm-provisioner-worker/: .env.example  AGENTS.md  README.md  build  pyproject.toml  setup  start  test
homelab-vm-provisioner-worker/hlvmp_worker/: __init__.py  config.py  db_client.py  dry_run_service_mode.py  executor.py  rabbitmq_consumer.py  socket_server.py  worker.py
homelab-vm-provisioner-worker/homelab_vm_provisioner_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
homelab-vm-provisioner-worker/scripts/: coverage  lib.sh  test
homelab-vm-provisioner-worker/tests/: test_config.py  test_db_client.py  test_executor.py  test_rabbitmq_consumer.py  test_socket_server.py  test_worker.py
scripts/: build-client-docker  build-proxy-docker  (+3 more)
(+19 files in other folders)
